@@ -67,6 +67,7 @@ if($Config::Tiny::errstr ne '') {
 $opt_help = 0;
 $opt_version = 0;
 $opt_numdays = 1;
+$opt_quiet = 0;
 
 $db_name = $Config->{Database}->{DBName};
 $db_host = $Config->{Database}->{DBHost};
@@ -89,6 +90,7 @@ Generate awards from Half-Life server statistics.
                                     password on the command line is insecure.
                                     Use the configuration file instead.)
       --db-username=USERNAME      database username
+   -q, --quiet                    disables all output. usefull while run with cron
 
 Long options can be abbreviated, where such abbreviation is not ambiguous.
 
@@ -110,12 +112,21 @@ GetOptions(
 	"db-host=s"			=> \$db_host,
 	"db-name=s"			=> \$db_name,
 	"db-password=s"		=> \$db_pass,
-	"db-username=s"		=> \$db_user
+	"db-username=s"		=> \$db_user,
+	"quiet|q"           => \$opt_quiet
 ) or die($usage);
 
 if ($opt_help) {
 	print $usage;
 	exit(0);
+}
+
+# can be used to supress all the output
+# does not work with windows
+if($opt_quiet) {
+	open STDIN, '/dev/null'   or die  $!;
+	open STDOUT, '>>/dev/null' or die $!;
+	open STDERR, '>>/dev/null' or die $!;
 }
 
 if ($opt_version) {
