@@ -7,6 +7,8 @@ HLStats ChangeLog
 *) New: Most time online chart at player overview. Needs serverplugin
 	which provides time info ( eg. AMX Mod X statsplugin )
 *) New: Game reset by server or all
+*) New: Command line argument -q|--quiet will surpress all output
+	Useful for cron jobs
 *) Changed: New Rank section in player detail page. #37
 *) Updated: blue.css and default.css small design changes
 *) Fixed: old weapon images converted to png
